2010-05-27 Doug Simons <doug.simons@testplant.com>

	* WinNSOpenPanel.m: Purge extraneous events which may get passed
	on to us from Windows while running modal open/save panels.

2010-05-27 00:52-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Do not generate fake menu items when displaying
	a menu for a NSPopUpButton which pulls down.

2010-05-26 23:53-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Added a call to update to the new methods so that
	the menus for both popups and for context menus are validated.

2010-05-20 04:17-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: added code to use the new displayPopUpMenu:... method
	and also added an implementation here to use it.   Additionally
	added a flag to r_create_menu which creates fake menu items if needed
	when building so that the parent popup button's state is updated
	correctly.

2010-05-13 17:06-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSBrowserHeader.m
	* WinNSButton.m
	* WinNSMenuItemCell.m
	* WinNSMenu.m
	* WinNSScroller.m
	* WinNSTableHeader.m: Call super class version of all methods
	when IsThemeActive() so that the default theme is used when
	the "Windows Classic" theme is selected.

2010-05-13 03:05-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSButton.m: Minor formatting cleanup.
	* WinNSMenuItemCell.m: Conditionally display the button theme,
	if the owning view is an NSMenuView, then don't draw the border.
	* WinNSMenu.m: Draw the menu view so that it has a darker border on
	all sides. Added an implemenation of drawBackgroundForMenuView:...

2010-05-13 00:41-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Use popup menus when generating the context
	menus.  Altered r_build_menu(..) function to accept an additional
	parameter to make this possible.

2010-05-12 18:44-EDT Gregory John Casamento <greg.casamento@gmail.com>
